--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ after_script:
 #  - sed -i "s/github_token/${GH_TOKEN}/g" _config.yml || exit 1
   - git add .
   - git commit -m "Travis CI Auto Builder at $(date +'%Y-%m-%d %H:%M:%S')"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" main:main
 # E: Build LifeCycle
 
 branches:
