--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -10,7 +10,7 @@ on:
 env:
   GIT_USER: LinYuXiang087241
   GIT_EMAIL: 1524204934@qq.com
-
+  
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -39,19 +39,15 @@ jobs:
           hexo generate
 
       - name: Setup SSH Keys and known_hosts
-        env:
-          DEPLOY_SECRET: ${{ secrets.DEPLOY_SECRET }}
         run: |
+          echo ${DELOPY_SECRET}
           sudo timedatectl set-timezone "Asia/Shanghai"
           mkdir -p ~/.ssh
-          echo "$DEPLOY_SECRET" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           cd ./public
           git init
           git config user.name "LinYuXiang087241"
           git config user.email "1524204934@qq.com"
-          cat ~/.ssh/id_rsa
           git add .
           git commit -m "Travis CI Auto Builder at $(date +'%Y-%m-%d %H:%M:%S')"
-          git push --force --quiet "git@github.com:LinYuXiang087241/LinYuXiang087241.github.io" main:main
+          git push --force --quiet "https://${DELOPY_SECRET}@github.com/LinYuXiang087241/LinYuXiang087241.github.io.git" main:main
