--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Setup SSH Keys and known_hosts
         env:
-          DEPLOY_SECRET: "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"
+          DELOPY_SECRET: "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"
         run: |
           echo ${DELOPY_SECRET}
           sudo timedatectl set-timezone "Asia/Shanghai"
