--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -47,9 +47,10 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           cd ./public
+          git status
           git init
           git config user.name "LinYuXiang087241"
           git config user.email "1524204934@qq.com"
           git add .
           git commit -m "Travis CI Auto Builder at $(date +'%Y-%m-%d %H:%M:%S')"
-          git push --force --quiet "https://${DELOPY_SECRET}@github.com/LinYuXiang087241/LinYuXiang087241.github.io.git" main
+          git push --force --quiet "https://${DELOPY_SECRET}@github.com/LinYuXiang087241/LinYuXiang087241.github.io.git" main:main
