--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -31,13 +31,11 @@ jobs:
         run: |
           npm install hexo-cli -g
           npm install
-
       - name: Check out hexo
         run: |
           hexo version
           hexo clean
           hexo generate
-
       - name: Setup SSH Keys and known_hosts
         env:
           DELOPY_SECRET: "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"
@@ -47,10 +45,11 @@ jobs:
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           cd ./public
-          git status
+          ls
           git init
           git config user.name "LinYuXiang087241"
           git config user.email "1524204934@qq.com"
           git add .
+          git status
           git commit -m "Travis CI Auto Builder at $(date +'%Y-%m-%d %H:%M:%S')"
-          git push --force --quiet "https://${DELOPY_SECRET}@github.com/LinYuXiang087241/LinYuXiang087241.github.io.git" main:main
+          git push --force "https://${DELOPY_SECRET}@github.com/LinYuXiang087241/LinYuXiang087241.github.io.git" main:main
