--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -37,10 +37,8 @@ jobs:
           hexo clean
           hexo generate
       - name: Setup SSH Keys and known_hosts
-        env:
-          DELOPY_SECRET: "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"
         run: |
-          echo ${DELOPY_SECRET}
+          echo ${DEPLOY_SECRET}
           sudo timedatectl set-timezone "Asia/Shanghai"
           mkdir -p ~/.ssh
           ssh-keyscan github.com >> ~/.ssh/known_hosts
@@ -52,4 +50,4 @@ jobs:
           git add .
           git status
           git commit -m "Travis CI Auto Builder at $(date +'%Y-%m-%d %H:%M:%S')"
-          git push --force "https://${DELOPY_SECRET}@github.com/LinYuXiang087241/LinYuXiang087241.github.io.git" main:main
+          git push --force "https://${DEPLOY_SECRET}@github.com/LinYuXiang087241/LinYuXiang087241.github.io.git" main:main
