--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -36,18 +36,4 @@ jobs:
           hexo version
           hexo clean
           hexo generate
-      - name: Setup SSH Keys and known_hosts
-        run: |
-          echo ${DEPLOY_SECRET}
-          sudo timedatectl set-timezone "Asia/Shanghai"
-          mkdir -p ~/.ssh
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          cd ./public
-          ls
-          git init
-          git config user.name "LinYuXiang087241"
-          git config user.email "1524204934@qq.com"
-          git add .
-          git status
-          git commit -m "Travis CI Auto Builder at $(date +'%Y-%m-%d %H:%M:%S')"
-          git push --force "https://${DEPLOY_SECRET}@github.com/LinYuXiang087241/LinYuXiang087241.github.io.git" main:main
+          hexo d
