--- a/_config.yml
+++ b/_config.yml
@@ -103,6 +103,6 @@ theme: next
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repository: git@github.com:LinYuXiang087241/LinYuXiang087241.github.io
- # repository: https://github.com/LinYuXiang087241/LinYuXiang087241.github.io.git
+  #repository: git@github.com:LinYuXiang087241/LinYuXiang087241.github.io
+  repository: https://${DEPLOY_SECRET}@github.com/LinYuXiang087241/LinYuXiang087241.github.io.git
   branch: main
