--- a/_config.yml
+++ b/_config.yml
@@ -105,4 +105,4 @@ deploy:
   type: git
   #repository: git@github.com:LinYuXiang087241/LinYuXiang087241.github.io
   repository: https://${DEPLOY_SECRET}@github.com/LinYuXiang087241/LinYuXiang087241.github.io.git
-  branch: main
+  branch: master
