--- a/.github/workflows/travis.yml
+++ b/.github/workflows/travis.yml
@@ -35,6 +35,7 @@ jobs:
         run: |
           git config user.name "LinYuXiang087241"
           git config user.email "1524204934@qq.com"
+          cd ./public
           hexo version
           hexo clean
           hexo generate
