--- a/.github/workflows/blog-ci.yml
+++ b/.github/workflows/blog-ci.yml
@@ -1,4 +1,4 @@
-name: Hexo Deploy
+name: WITH CI
 
 # 只监听 gh-pages 分支的改动
 on:
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2  #软件市场的名称
+        with: # 参数
+          submodules: false
+          persist-credentials: false
 
       # 这里用的是 Node.js 13.x，14.x 生成 Hexo 静态页面会有问题
       - name: Set up Node.js
