--- a/.github/workflows/blog-ci.yml
+++ b/.github/workflows/blog-ci.yml
@@ -14,7 +14,6 @@ jobs:
         uses: actions/checkout@v2  #软件市场的名称
         with: # 参数
           submodules: false
-          persist-credentials: false
 
       # 这里用的是 Node.js 13.x，14.x 生成 Hexo 静态页面会有问题
       - name: Set up Node.js
@@ -37,7 +36,7 @@ jobs:
           hexo g
 
       # 部署到 GitHub Pages
-      - name: upload GitHub repository
+      - name: Upload GitHub Repository
         env: 
           # Github 仓库
           GITHUB_REPO: github.com/SuenMao/SuenMao.github.io
